--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -1,21 +1,19 @@
 # some information about you
-name: "John Doe"
-nickname: "John"
+name: "iamNick"
+nickname: "Nick"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Hi, I am"
 image: "images/author/john.png"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "johndoe@example.com"
-  phone: "+0123456789"
-  github: johndoe
-  linkedin: johndoe
-  researchgate: john-doe
+  email: "hi@thecodehouse.net"
+  # phone: "+0123456789"
+  # github: johndoe
+  # linkedin: johndoe
+  # researchgate: john-doe
 
 # some summary about what you do
 summary:
-  - I am a Developer
-  - I am a Devops
-  - I love servers
-  - I work on open-source projects
-  - I love to work with some fun projects
+  - I am a Solutions Architect
+  - I am a Cloud Consultant
+  - Passionate about Cloud Computing
